--- a/EFPartyInvites/Views/Home/_Layout.cshtml
+++ b/EFPartyInvites/Views/Home/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>EFParty Invites</title>
-    <link rel="stylesheet" href="~/lib/twitter-bootstrap/css/bootstrap.css" />
+    <link rel="stylesheet" href="~/lib/css/bootstrap.css" />
 </head>
 <body>
     @RenderBody()
